--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
   <meta charset="utf-8">
   <title>Магазин вкусного мороженого Глейси</title>
+  <link  href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic rel="stylesheet">
+  <link  href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -70,7 +73,7 @@
 <h1 class="visually-hidden">Главная страница</h1>
 <section class="advantages">
   <h2 class="visually-hidden">Преимущества</h2>
-  <p class="specification shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+  <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
   <ul class="excellence-lead">
     <li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
     <li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
@@ -78,13 +81,15 @@
     <li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   </ul>
 </section>
+<section class="blog">
 <!--это же фон? куда его вставить?-->
-<h3 class="blog news">Новое в нашем блоге</h3>
+<h3 class="blog-news">Новое в нашем блоге</h3>
 <a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a>
 </section>
-<section>
+
+<section class="newsletter">
 <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-<form class="news-form" method="get" action="https:_.ru">
+<form class="mail-form" method="get" action="https:_.ru">
   <label for="input" hidden="user-mail">Электронная почта</label>
   <input type="text" id="user-mail" placeholder="Электронная почта">
   <input type="submit" value="Отправить">
