--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Глейси: каталог</title>
+    <link  href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link  href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
@@ -25,174 +28,151 @@
       <li><a href="about-us">О компании</a></li>
     </ul>
     <ul class="user-navigation">
-       <li>
-          <a href="button">Поиск</a>
-          <form class="search-form" method="get" action="https:_.ru">
-            <p>
-              <label for="search-input" hidden="">Что ищем?</label>
-input
-            </p>
-          </form>
-        </li>
-        <li><a class="login-link" href="login.html">Вход</a>
-        <form class="login-form" method="get" action="https:_.ru">
+      <li>
+        <a href="button">Поиск</a>
+        <form class="search-form" method="get" action="https:_.ru">
           <p>
-            <label for="login-user" hidden="">Электронная почта</label>
-            <input type="text" id="login-user" name="login" placeholder="Электронная почта">
+            <label for="search-input" hidden="">Что ищем?</label>
+            input
           </p>
-          <p>
-            <label for="user-password" hidden="">Пароль</label>
-            <input id="user-password" type="password" name="password" placeholder="Пароль">
-          </p>
-          <button type="submit">Войти</button>
-          <a class="login-form-link" href="#">Забыли пароль?</a>
-          <a class="login-form-link" href="#">Новая регистрация</a>
         </form>
       </li>
-
-      <li><a href="button">Корзинa</a>
-      <div class="basket-form">
-        <table>
-          <tr>
-            <td>Пломбир с апельсиновым джемом</td>
-            <td>1.5 кг</td>
-            <td>300 р.</td>
-          </tr>
-          <tr>
-            <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-            <td>1.5 кг</td>
-            <td>450 р.</td>
-          </tr>
-        </table>
-        <a href="Checkout">Оформить заказ</a>
-      </div>
+      <li><a class="login-link" href="login.html">Вход</a>
+      <form class="login-form" method="get" action="https:_.ru">
+        <p>
+          <label for="login-user" hidden="">Электронная почта</label>
+          <input type="text" id="login-user" name="login" placeholder="Электронная почта">
+        </p>
+        <p>
+          <label for="user-password" hidden="">Пароль</label>
+          <input id="user-password" type="password" name="password" placeholder="Пароль">
+        </p>
+        <button type="submit">Войти</button>
+        <a class="login-form-link" href="#">Забыли пароль?</a>
+        <a class="login-form-link" href="#">Новая регистрация</a>
+      </form>
     </li>
-  </ul>
+    <li><a href="button">Корзинa</a>
+    <div class="basket-form">
+      <table>
+        <tr>
+          <td>Пломбир с апельсиновым джемом</td>
+          <td>1.5 кг</td>
+          <td>300 р.</td>
+        </tr>
+        <tr>
+          <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+          <td>1.5 кг</td>
+          <td>450 р.</td>
+        </tr>
+      </table>
+      <a href="Checkout">Оформить заказ</a>
+    </div>
+  </li>
+</ul>
 </nav>
 <div class="time-work">
-  <p>c 10 до 20, ежедневно 8 812 450-25-25</p>
+<p>c 10 до 20, ежедневно 8 812 450-25-25</p>
 </div>
 </header>
 <main class="catalog-page">
 <section class="navigation-top">
-  <h2 class="visually-hidden">Навигация</h2>
-  <ul class="breadcrumbs">
-    <li><a href="#">Главная</a></li>
-    <li><a class="active" href="#">Каталог</a></li>
-    <li><a>Сливочное</a></li>
-  </ul>
-  <h1 class="icecream-category">Сливочное мороженое</h1>
+<h2 class="visually-hidden">Навигация</h2>
+<ul class="breadcrumbs">
+  <li><a href="#">Главная</a></li>
+  <li><a class="active" href="#">Каталог</a></li>
+  <li><a>Сливочное</a></li>
+</ul>
+<h1 class="icecream-category">Сливочное мороженое</h1>
 </section>
 <section class="item-cards">
-  <h2 class="visually-hidden">Карточки товаров</h2>
-  <ul class="item-cards-table">
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-orange.jpg" alt="фото мороженки">
-        <p class="card-price">310 P/кг</p>
-        <p class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
-        <p class="card-price">325 P/кг</p>
-        <p class="card-name">Сливочное c брусничным джемом</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
-        <p class="card-price">440 P/кг</p>
-        <p class="card-name">Сливочно-ванильное с кусочками шоколада</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-coffee.jpg" alt="фото мороженки">
-        <p class="card-price">380 P/кг</p>
-        <p class="card-name">Сливочно-кофейное с кусочками шоколада</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
-        <p class="card-price">410 P/кг</p>
-        <p class="card-name">Сливочно-черничное с цельным ягодами черники</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-menthol.jpg" alt="фото мороженки">
-        <p class="card-price">435 P/кг</p>
-        <p class="card-name">Сливочное с ментоловым сиропом</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
-        <p class="card-price">355 P/кг</p>
-        <p class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-lemon.jpg" alt="фото мороженки">
-        <p class="card-price">375 P/кг</p>
-        <p class="card-name">Сливочно-лимонное с карамельной присыпкой</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
-        <p class="card-price">355 P/кг</p>
-        <p class="card-name">Сливочное с кусочками черного шоколада</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
-        <p class="card-price">415 P/кг</p>
-        <p class="card-name">Сливочное крем-брюле с карамельной подливкой</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
-        <p class="card-price">320 P/кг</p>
-        <p class="card-name">Сливочное с шоколадной стружкой</p>
-      </div>
-    </li>
-    <li>
-      <div class="icecream-card">
-        <img src="img/icecream-mint.jpg" alt="фото мороженки">
-        <p class="card-price">420 P/кг</p>
-        <p class="card-name">Сливочное с мятным сиропом</p>
-      </div>
-    </li>
-  </ul>
+<h2 class="visually-hidden">Карточки товаров</h2>
+<div class="item-cards-row">
+  <div class="icecream-card">
+    <img src="img/icecream-orange.jpg" alt="фото мороженки">
+    <p class="card-price">310 ₽/кг</p>
+    <p class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
+    <p class="card-price">325 ₽/кг</p>
+    <p class="card-name">Сливочное c брусничным джемом</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
+    <p class="card-price">440 ₽/кг</p>
+    <p class="card-name">Сливочно-ванильное с кусочками шоколада</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-coffee.jpg" alt="фото мороженки">
+    <p class="card-price">380 ₽/кг</p>
+    <p class="card-name">Сливочно-кофейное с кусочками шоколада</p>
+  </div>
+</div>
+<div class="item-cards-row">
+  <div class="icecream-card">
+    <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
+    <p class="card-price">410 ₽/кг</p>
+    <p class="card-name">Сливочно-черничное с цельным ягодами черники</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-menthol.jpg" alt="фото мороженки">
+    <p class="card-price">435 ₽/кг</p>
+    <p class="card-name">Сливочное с ментоловым сиропом</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
+    <p class="card-price">355 ₽/кг</p>
+    <p class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-lemon.jpg" alt="фото мороженки">
+    <p class="card-price">375 ₽/кг</p>
+    <p class="card-name">Сливочно-лимонное с карамельной присыпкой</p>
+  </div>
+</div>
+<div class="item-cards-row">
+  <div class="icecream-card">
+    <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
+    <p class="card-price">355 ₽/кг</p>
+    <p class="card-name">Сливочное с кусочками черного шоколада</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
+    <p class="card-price">415 ₽/кг</p>
+    <p class="card-name">Сливочное крем-брюле с карамельной подливкой</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
+    <p class="card-price">320 ₽/кг</p>
+    <p class="card-name">Сливочное с шоколадной стружкой</p>
+  </div>
+  <div class="icecream-card">
+    <img src="img/icecream-mint.jpg" alt="фото мороженки">
+    <p class="card-price">420 ₽/кг</p>
+    <p class="card-name">Сливочное с мятным сиропом</p>
+  </div>
+</div>
 </section>
 </main>
 <footer class="main-footer">
 <div class="footer-social">
-  <ul>
-    <li><a class="social-button" href="#"><img src="img/twitter.svg">Twitter</a></li>
-    <li><a class="social-button" href="#"><img src="img/instagram.svg">Instagram</a></li>
-    <li><a class="social-button" href="#"><img src="img/fb.svg">Facebook</a></li>
-    <li><a class="social-button" href="#"><img src="img/vk.svg">Vkontakte</a></li>
-  </ul>
+  <div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
+  <div><a class="social-button" href="#"><img src="img/instagram.svg"></a></div>
+  <div><a class="social-button" href="#"><img src="img/fb.svg"></a></div>
+  <div><a class="social-button" href="#"><img src="img/vk.svg"></a></div>
 </div>
 <div class="footer-info">
-  <ul>
-    <li><a class="info" href="#"><img src="img/heart.svg">Для поставщиков</a></li>
-    <li><a class="info" href="#">О производстве</a></li>
-    <li><a class="info" href="#">Наши документы</a></li>
-    <li><a class="info" href="#">Экологические стандарты</a></li>
-  </ul>
+<ul>
+  <li><a class="info" href="#"><img src="img/heart.svg">Для поставщиков</a></li>
+  <li><a class="info" href="#">О производстве</a></li>
+  <li><a class="info" href="#">Наши документы</a></li>
+  <li><a class="info" href="#">Экологические стандарты</a></li>
+</ul>
 </div>
 <div class="footer-copyright">
-  <p>Сделано в HTML Academy</p>
-  <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+<p>Сделано в HTML Academy</p>
+<a class="htmlacademy-button" href="https://htmlacademy.ru">HTML Academy</a>
 </div>
 </footer>
 </body>
